	  RAMTRON parts.  From David Sidrane (2015-08-10).
	* Networking:  Allow receipt of empty UDP packets.  From Max Neklyudov
	  (2015-08-11).
	* drivers/sensors/mb7040.c and include/nuttx/sensors/mb7040.h: Add
	  support for a MB7040 sonar driver.  From Paul Alexander Patience
	  (2015-08-11).
	* net/udp:  Add support for send() for connected UDP sockets
	  (2015-08-11).
	* drivers/sensors/ms5805.c and include/nuttx/sensors/ms5805.h: Add
	  support for an MS5805 altimeter.  From Paul Alexander Patience
	  (2015-08-12).

7.12 2015-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* fs/vfs/fs_poll.c:  Use sem_tickwait() instead of sem_timedwait()
	  From Macs Neklyudov (2015-08-13).
	* fs/vfs/fs_poll.c:  If we fail to setup the poll for any file
	  descriptor, for any reason, set the POLLERR bit (2015-08-13).
	* libc/stdlib: Add support for div() to the C library.  From
	  OrbitalFox (2015-08-14).
	* libc/stdlib:  Might as well add ldiv() and lldiv() to since
	  these are equivalent to div() with long and long long types,
	  respectively, instead of int (2015-08-14).
	* include/signal.h and files that include it:  Add si_errno to
	  siginfo_t (2015-08-14).
	* drivers/sensors/mx58xx.c and include/nuttx/sensors/ms58xx.h:
	  General the MS5805 altimeter driver to support other family
	  members and rename to ms58xx. From Paul Alexander Patience
	  (2015-08-14).
	* Network drivers. Fix bug in tun interface driver.  From Max
	  Neklyudov (2015-08-17).
	* STM32:  Added definitions for STM32F303K6, STM32F303K8, STM32F303C6,
	  STM32F303C8, STM32F303RD, and STM32F303RE devices.  From Paul
	  Alexander Patience (2015-08-17).
	* include/nuttx/can.h and all CAN drivers: Add an error indication
	  bit to the CAN message report.  This indication must then be cleared
	  in all existing drivers.  More to come (2015-08-18).
	* arch/arm/src/lpc17/lpc17_irq.c: Set NVIC vector address so that
	  code can execute with a bootloader or can execute from RAM.  From
	  Pavel Pisa (2015-08-20).